--- a/index.html
+++ b/index.html
@@ -428,5 +428,170 @@
         </div>
       </div>
     </div>
+    <!-- pottery-end -->
+    <!-- teacher-section -->
+    <div class="teacher-section mw">
+      <div class="top-teacher-text">
+        <h5>DEDICATED TO YOUR CHILD'S GROWTH</h5>
+        <h2>Meet Our Exceptional Teachers</h2>
+      </div>
+      <div class="teacher-section-content">
+        <div class="teacher-row">
+          <div class="teacher-card">
+            <img
+              src="images/64ec7eb2dcca3a694066cd12_Happy Family.png"
+              alt=""
+            />
+            <h4>Ms. Emily Thompson</h4>
+            <p>
+              Meet Ms. Emily Thompson, a warm- <br />hearted educator who holds
+              a passion <br />
+              for nurturing young minds.
+            </p>
+            <div class="btm-row">
+              <a href="">Get in Touch</a>
+              <img
+                src="images/64ddd012c07ba4c4232d92e6_Arrow right orange.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="teacher-card">
+            <img
+              src="images/64ec7eb2716bd9dea0c40275_Drawing Kids Table.png"
+              alt=""
+            />
+
+            <h4>Ms. Emily Thompson</h4>
+            <p>
+              Meet Ms. Emily Thompson, a warm- <br />hearted educator who holds
+              a passion <br />
+              for nurturing young minds.
+            </p>
+            <div class="btm-row">
+              <a href="">Get in Touch</a>
+              <img
+                src="images/64ddd012c07ba4c4232d92e6_Arrow right orange.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="teacher-card">
+            <img
+              src="images/64ec7eb2dacb057e3f64818a_Looking Kids Smile.png"
+              alt=""
+            />
+            <h4>Ms. Emily Thompson</h4>
+            <p>
+              Meet Ms. Emily Thompson, a warm- <br />hearted educator who holds
+              a passion <br />
+              for nurturing young minds.
+            </p>
+            <div class="btm-row">
+              <a href="">Get in Touch</a>
+              <img
+                src="images/64ddd012c07ba4c4232d92e6_Arrow right orange.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- TEACHER-END -->
+    <!-- connected-section -->
+    <div class="connected-section mw">
+      <div class="connected-section-content">
+        <div class="connected-left">
+          <img src="/images/phone.png" alt="" />
+        </div>
+        <div class="connected-right">
+          <h3>
+            Stay Connected with Bright <br />
+            Beginnings Childcare App!
+          </h3>
+          <div class="connected-text-group">
+            <h2>Connect with Other Parents</h2>
+            <p>
+              Building a supportive and inclusive school community is a priority
+              for <br />
+              us. Through our app's interactive features, you can connect with
+              <br />
+              other parents, arrange playdates, and participate in discussions
+              <br />
+              about parenting or educational topics. It's a fantastic way to
+              share <br />
+              experiences, exchange tips, and form lasting friendships with
+              like- <br />minded parents.
+            </p>
+          </div>
+          <div class="connected-text-group">
+            <h2>Real-Time Updates</h2>
+            <p>
+              With the Bright Beginnings Childcare App, you'll never miss an
+              <br />
+              important event or announcement. Stay informed about upcoming
+              <br />
+              school activities, parent-teacher meetings, and fun-filled events
+              in <br />
+              real-time. You can easily add events to your calendar, set
+              reminders, <br />
+              and plan your schedule accordingly.
+            </p>
+          </div>
+          <div class="connected-text-group">
+            <h2>Photo and Video Sharing</h2>
+            <p>
+              Experience the joy of your child's learning journey through photo
+              and <br />
+              video updates shared on the app. Witness their precious moments,
+              <br />
+              artistic creations, and newfound friendships right on your mobile
+              <br />
+              device, no matter where you are. Our secure sharing platform
+              <br />
+              ensures that only parents and authorized guardians have access to
+              <br />
+              these delightful memories.
+            </p>
+          </div>
+          <div class="connected-row">
+            <img src="/images/apple.png" alt="" />
+            <img src="images/google2.png"" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- CONNECTED-END -->
+    <!-- NEWS-SECTION -->
+    <div class="news-section mw">
+      <h2>Keep an Eye on Our News</h2>
+      <div class="news-section-content">
+        <div class="news-left">
+          <img src="images/505.png" alt="" />
+          <p>SEPTEMBER 14, 2023</p>
+          <h3>Unraveling the Fun in Science & Technology</h3>
+        </div>
+        <div class="news-right">
+          <div class="news-card">
+            <img src="images/506.png" alt="" />
+            <p>SEPTEMBER 14, 2023</p>
+            <h3>
+              Embracing Diversity and Inclusivity in <br />
+              Education
+            </h3>
+          </div>
+          <div class="news-card">
+            <img src="images/507.png" alt="" />
+            <p>SEPTEMBER 14, 2023</p>
+            <h3>
+              Embracing Young Minds: The Magic <br />
+              of Encouragement and Positive <br />
+              Reinforcement <br />
+            </h3>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
